# echo

./: .gitmodules  README.md  echo  pyproject.toml
.github/workflows/: update-submodules.yml
services/avatar/: package-lock.json  package.json
services/avatar/assets/models/Roboto/: Roboto.model3.json
